# nrf9151-dk-mender

./: CONTRIBUTING.MD  README.md  west.yml
.github/workflows/: build.yml  build_and_upload.yml  deploy.yml
app/: CMakeLists.txt  pm_static.yml  prj.conf
app/boards/: nrf9151dk_nrf9151_ns.overlay
app/src/: main.c  mbedtls_entropy_shim.c  mender.c  mender.h
app/src/mender_net_zephyr/: http.c  net.c
app/sysbuild/: app.conf
